Bug 468777 - Touch rotation broken in macOS
Summary: Touch rotation broken in macOS
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Shortcuts and Canvas Input Settings (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources macOS
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2023-04-21 20:54 UTC by vanyossi
Modified: 2023-05-02 11:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description vanyossi 2023-04-21 20:54:45 UTC
since b8c33501ac27d9822f7113026a8c3c6cb7d68e40

Using the trackpad to rotate is not possible after this patch.
As a side effect, stepped rotation shortcut makes cursor get stuck to the rotation icon.
Comment 1 Halla Rempt 2023-04-26 08:59:49 UTC
Are you going to work on this? I doubt the original author has access to macOS.
Comment 2 vanyossi 2023-04-26 20:25:01 UTC
yeah, I'll make some time to fix it.
Comment 3 Bug Janitor Service 2023-04-28 02:50:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1793
Comment 4 Dmitry Kazakov 2023-05-02 11:53:38 UTC
Git commit bd77cad7f3ca951e484f312c3c96acb9e35227c9 by Dmitry Kazakov, on behalf of Ivan Yossi.
Committed on 02/05/2023 at 11:51.
Pushed by dkazakov into branch 'master'.

allow differentiation of nativeGesture rotate and touch rotate

M  +4    -1    libs/ui/canvas/kis_canvas_controller.cpp
M  +1    -1    libs/ui/canvas/kis_canvas_controller.h
M  +9    -1    libs/ui/canvas/kis_coordinates_converter.cpp
M  +2    -0    libs/ui/canvas/kis_coordinates_converter.h
M  +1    -1    libs/ui/input/kis_rotate_canvas_action.cpp

https://invent.kde.org/graphics/krita/commit/bd77cad7f3ca951e484f312c3c96acb9e35227c9