allow differentiation of nativeGesture rotate and touch rotate

BUG:468777